--- a/python_csv_list.ipynb
+++ b/python_csv_list.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "#s5s.close()\n",
-    "#h5s = pd.HDFStore('C:\\\\Users\\Michal\\Dropbox\\IB_data\\SPY'+ '.h5s', 'r')\n",
+    "#h5s = pd.HDFStore('C:\\\\Users\\M...\\Dropbox\\IB_data\\SPY'+ '.h5s', 'r')\n",
     "#spy = h5s['SPY'] "
    ]
   },
@@ -139,8 +139,8 @@
     }
    ],
    "source": [
-    "#path = 'C:\\\\Users\\Michal\\Dropbox\\IB_data'\n",
-    "path = 'C:\\\\Users\\Michal\\Desktop'+ '\\SPY31July17.csv'\n",
+    "#path = 'C:\\\\Users\\M...\\Dropbox\\IB_data'\n",
+    "path = 'C:\\\\Users\\M...\\Desktop'+ '\\SPY31July17.csv'\n",
     "time,bidP_list,bidS_list,askP_list,askS_list=read_data(path)\n",
     "#close_list,price_list=fearure_creation(time,bidP_list,bidS_list,askP_list,askS_list,20)"
    ]
